<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Little Drops Of Rain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_facebook" translatable="false">Facebook</string>
    <string name="menu_admin" translatable="false">Admin</string>
    <string name="rv_title" translatable="false">%1$s</string>
    <string name="rv_disponibility" translatable="false">%1$s</string>
    <string name="rv_price" translatable="false">R$%1$s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="product_image">Product image</string>
    <string name="login" translatable="false">Login</string>
    <string name="reload_products">Reload Products</string>
    <string name="unable_to_log_in">Unable to log in</string>
    <string name="log_in_successful">Log in successful</string>
    <string name="msg_creation_date">Creation Date: %1$s</string>
    <string name="msg_sender">Sender: %1$s</string>
    <string name="msg_read">Read</string>
    <string name="msg_read_filter">Read: %1$s</string>
    <string name="user_logged_as">User logged as : %1$s</string>
    <string name="message_to_send">Message to send</string>
    <string name="title">Title</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="no_messages_found">No messages found</string>
    <string name="no_products_found">No products found</string>
    <string name="sorted_by_categories">Sorted by Categories</string>
    <string name="value_any_price">Any price</string>
    <string name="price_1" translatable="false">$</string>
    <string name="price_2" translatable="false">$$</string>
    <string name="price_3" translatable="false">$$$</string>
    <string name="all_products">All Products</string>
    <string name="header_filters">Filter</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="icon_sort">Icon sort</string>
    <string name="icon_price">Icon price</string>
    <string name="icon_category">Icon category</string>
    <string name="button_filter">Button filter</string>
    <string name="button_clear_filter">Button clear filter</string>
    <string name="all">All</string>
    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_subscribe_failed">Subscription failed</string>
    <string name="msg_subscribed_to_news">Subscribed to News!</string>
    <string name="msg_subscribed_to_promos">Subscribed to Promos!</string>
    <string name="msg_subscribed_to_admins">Subscribed to Admins!</string>
    <string name="msg_subscribe_promos_failed">Unable to subscribe to promotions</string>
    <string name="msg_subscribe_news_failed">Unable to subscribe to News</string>
    <string name="msg_subscribe_admins_failed">Unable to subscribe to Admins</string>
    <string name="message_title">Title</string>
    <string name="message_body">Message Body</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="label_topic">Topic Messages</string>
    <string name="msg_unsubscribed">Unsubscribed</string>
    <string name="user_is_admin">Is Admin</string>
    <string name="rv_user_name">Name : %1$s</string>
    <string name="rv_user_email" translatable="false">EMail : %1$s</string>
    <string name="rv_user_is_admin">Is Admin</string>
    <string name="menu_users">Users</string>
    <string name="no_users_found">No users found</string>
    <string name="failure_changing_user">Error changing user</string>
    <string name="email_send">Send email…</string>
    <string name="email_no_clients_installed">There are no email clients installed.</string>
    <string name="message">Message</string>
    <string name="email">EMail</string>
    <string name="no_send_method_selected">No send method selected</string>
    <string name="email_sender">EMail Sender</string>
    <string name="sorted_by_read">Sorted by Read</string>
    <string name="sorted_by_creation_date">Sorted by Creation Date</string>
    <string name="sorted_by_email_sender">Sorted by Email Sender</string>
    <string name="enable">Enable</string>
    <string name="sort_by_creation_date">Creation Date</string>
    <string name="sort_by_read">Read</string>
    <string name="action_reload_products">Reload Products</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="for_filter">" for "</string>
    <string name="menu_instagram" translatable="false">Instagram</string>
    <string name="action_send_message">Send Message</string>
    <string name="button_delete">Button Delete</string>
    <string name="button_reply">Button Reply</string>
    <string name="icon_users">Icon Users</string>
    <string name="remove_not_found_products">Remove not found products</string>
    <string name="menu_messages">Messages</string>
    <string name="messages">Messages</string>
    <string name="licenses">Licenses</string>
    <string name="new_notification">New message from Little Drops of Rain</string>
    <string name="name_notification_channel">Little Drops Of Rain Notification Channel</string>
    <string name="finished">Finished</string>
    <string name="be_patient">This may take a while, please be patient</string>
    <string name="url_push_message" translatable="false">https://content-fcm.googleapis.com/v1/projects/littledropsofrain-site/messages:send</string>
    <string name="url_instagram" translatable="false">https://www.instagram.com/little_drops_of_rain</string>
    <string name="url_facebook" translatable="false">https://www.facebook.com/m.andrea.littledrops/</string>
    <string name="cannot_send_message_to_yourself">Cannot send message to yourself</string>
    <string name="please_select_a_topic">Please select a Topic</string>
    <string name="menu_all_messages">All Messages</string>
    <string name="privacy">Privacy</string>
    <string name="label_send_message">Send Message</string>
    <string name="label_settings">Settings</string>
    <string name="label_privacy">Privacy Policy</string>
    <string name="label_all_messages">All Messages</string>
    <string name="message_type_message">Message</string>
    <string name="message_type_notification">Notification</string>
    <string name="message_type_any">Any</string>
    <string name="and_filter">" and "</string>
    <string name="save">SAVE</string>
    <string name="saved">SAVED</string>
    <string name="notification_image">Notification Image</string>
    <string name="file_upload_success">Successo uploading arquivo</string>
    <string name="file_upload_failure">Falha uploading arquivo</string>
    <string name="message_image">Message Image</string>
    <string name="logo_toolbar">Logo Toolbar</string>
    <string name="please_wait">Please Wait</string>
    <string name="label_tos">Terms of Service</string>
    <string name="privacy_url" translatable="false">https://littledropsofrain-site.web.app/privacy.html</string>
    <string name="tos_url" translatable="false">https://littledropsofrain-site.web.app/tos.html</string>
    <string name="name">Name</string>
    <string name="change_image">Change Image</string>
    <string name="update">Update</string>
    <string name="user_image">User Image</string>
    <string name="android_package_name" translatable="false">app.web.diegoflassa_site</string>
    <string name="dynamic_link_domain" translatable="false">ldor.page.link</string>
    <string name="dynamic_link_url" translatable="false">https://ldor.page.link/passwordless</string>
    <string name="exit">Exit</string>
    <string name="tos_title">Terms of Service</string>
    <string name="label_user_profile">User Profile</string>
    <string name="maintenance">Store in Maintenance</string>
    <string name="menu_off_air">Off Air</string>
    <string name="off_air">Off Air</string>
    <string name="configuration_applied">Configuration applied successfully</string>
    <string name="configuration_not_applied">Configuration not applied</string>
    <string name="configuration_fetch_failed">Configuration Fetch failed</string>
    <string name="configuration_fetch_successfull">Remote config Fetch Successful</string>
    <string name="liked">Liked</string>
    <string name="label_my_liked_products">My Likes</string>
    <string name="unpublish_not_found_products">Unpublish not found products</string>
    <string name="menu_all_products">All Products</string>
    <string name="label_all_products">All Products</string>
    <string name="close">Close</string>
    <string name="sort_by_likes">Likes</string>
    <string name="off_air_en">Off Air message in English</string>
    <string name="off_air_pt">Off Air message in Portuguese</string>
    <string name="fab_preview_topic_message">Preview Topic Message</string>
    <string name="fab_send_topic_message">Send Topic Message</string>
    <string name="fab_select_image">Select Image</string>
    <string name="fab_reload_products">Reload Products</string>
    <string name="fab_send_message">Send Message</string>
    <string name="fab_main">Fab Main</string>
    <string name="fab_off_air">Fab Off Air</string>
    <string name="rv_last_seen">Last Seen : %1$s</string>
    <string name="is_published">Is Published</string>
    <string name="sorted_by_likes">Sorted by Likes</string>
    <string name="remove_like_from_unpublished_product">You are going to remove the Like from an Unpublished product. Doing it will prevent you from seeing it again. Are you sure that you want to remove it?</string>
    <string name="remove_message_confirmation">Are you sure that you want to delete this message?</string>
    <string name="remove_user_confirmation">Are you sure that you want to delete this user?</string>
    <string name="rv_creation_date">Creation Date: %1$s</string>
    <string name="no_likes_found">No Likes found</string>
    <string name="remove_like_from_user">You are going to remove the Like from the user: %1$s. Are you sure that you want to remove it?</string>
    <string name="no_selection">No selection</string>
    <string name="none">None</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="keep_me_connected">keep me connected</string>
    <string name="does_not_have_account">Does not have account?</string>
    <string name="continue_with">Continue with</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="create_new_account">Create new account</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an account? Enter</string>
    <string name="register">Register</string>
    <string name="or_enter_with">Or enter with</string>
    <string name="content_descriptor_log_with_facebook">Log with Facebook</string>
    <string name="label_progress" translatable="false">Progress</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_home">Home</string>
    <string name="nav_basket">Basket</string>
    <string name="nav_profile">Profile</string>
    <string name="label_main">Main</string>
    <string name="label_home_iluria">Home</string>
    <string name="label_blank">Blank</string>
</resources>