<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_shopping_cart"
        android:orderInCategory="100"
        android:title="@string/shopping_cart"
        app:showAsAction= "always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_licenses"
        android:orderInCategory="100"
        android:title="@string/licenses" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        android:title="@string/privacy" />
    <item
        android:id="@+id/action_tos"
        android:orderInCategory="100"
        android:title="@string/tos_title" />
</menu>