<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/paddingSmall"
    android:tag="MyMessagesFilterDialogFragment"
    tools:context=".presentation.old.fragments.myMessagesFilterDialog.MyMessagesFilterDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/header_filters" />

    <!-- Message Type -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_message_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon_sort"
            app:srcCompat="@drawable/fui_ic_mail_white_24dp"
            app:tint="@color/colorAccent" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_message_type"
            android:entries="@array/messages_type" />
    </RelativeLayout>

    <!-- Read -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_msg_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon_category"
            app:srcCompat="@drawable/ic_filter_list_white_24px"
            app:tint="@color/colorAccent" />

        <CheckBox
            android:id="@+id/checkBoxMsgRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="-1dp"
            android:layout_toEndOf="@+id/icon_msg_read"
            android:text="@string/enable" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_msg_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_toEndOf="@+id/checkBoxMsgRead"
            android:text="@string/msg_read">

        </com.google.android.material.switchmaterial.SwitchMaterial>

    </RelativeLayout>

    <!-- Sort by -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/icon_sort"
            app:srcCompat="@drawable/ic_sort_white_24px"
            app:tint="@color/colorAccent" />

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_sort"
            android:entries="@array/messages_sort_by" />
    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel_messages"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:theme="@style/MyMaterialButtonTheme"
            app:icon="@drawable/btn_clear"
            app:iconGravity="textStart"
            app:iconTint="@color/colorAccent"
            tools:ignore="ButtonOrder" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search_messages"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/MyMaterialButtonTheme"
            app:icon="@drawable/fui_ic_check_circle_black_128dp"
            app:iconGravity="textStart"
            app:iconSize="30dp" />

    </LinearLayout>

</LinearLayout>

