<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainUserItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/product_image"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/user_is_admin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/rv_user_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/user_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/paddingSmall"
            android:layout_marginTop="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/rv_user_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_picture"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/user_creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/paddingSmall"
            android:layout_marginTop="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/rv_creation_date"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/user_last_seen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_picture"
            app:layout_constraintTop_toBottomOf="@+id/user_email" />

        <TextView
            android:id="@+id/user_last_seen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/paddingSmall"
            android:layout_marginTop="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/rv_last_seen"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/user_is_admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_picture"
            app:layout_constraintTop_toBottomOf="@+id/user_creation_date" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/user_is_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/paddingSmall"
            android:layout_marginBottom="16dp"
            android:text="@string/user_is_admin"
            android:theme="@style/ColorSwitchStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_reply_user"
            app:layout_constraintTop_toBottomOf="@id/user_last_seen" />

        <ImageButton
            android:id="@+id/btn_reply_user"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:layout_marginEnd="@dimen/paddingSmall"
            android:contentDescription="@string/button_reply"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:scaleType="fitXY"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="@+id/btn_delete_user"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete_user"
            app:layout_constraintTop_toTopOf="@+id/btn_delete_user"
            tools:src="@drawable/image_placeholder" />

        <ImageButton
            android:id="@+id/btn_delete_user"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/button_delete"
            android:scaleType="fitXY"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="@+id/user_is_admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_is_admin"
            tools:src="@drawable/image_placeholder" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_user_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="user_picture, user_is_admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="128dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>