<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="OffAirFragment"
    tools:context=".presentation.ui.off_air.OffAirFragment">


    <CheckBox
        android:id="@+id/chkBxOffAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/off_air"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtMlOffAirMessageEn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/paddingSmall"
        android:layout_marginEnd="@dimen/paddingSmall"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/off_air"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/off_air_en"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtMlOffAirMessagePt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkBxOffAir" />

    <EditText
        android:id="@+id/edtTxtMlOffAirMessagePt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/paddingSmall"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/off_air"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/off_air_pt"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/fabOffAir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtMlOffAirMessageEn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOffAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/paddingSmall"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:contentDescription="@string/fab_off_air"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>